# phylogenetics

./: .gitignore  .gitlab-ci.yml  .merlin  Changes  Makefile  NOTES.md  README.md  dune-project  main.ml  myocamlbuild.ml  phylogenetics.opam  readme.md  reject_branch.plt  test.ml  tree.ml
app/: .ocamlinit  bench_app.ml  dune  jbuild  phylosim.ml  tamuri_null_check.ml  tdg09_null_check.ml  test_app.ml  zipper_explorer.ml
lib/: .ocamlinit  DNA.ml  ID_monad.ml  ID_monad.mli  IUPAC_AA.ml  IUPAC_AA.mli  LATools.ml  LATools.mli  Models.ml  Models.mli  Sequence.ml  Sequence.mli  TKF91.ml  TKF91.mli  TopoTree.mli  alignment.ml  alignment.mli  alphabet.ml  amino_acid.ml  amino_acid.mli  birth_death.ml  birth_death.mli  bpp_model.ml  bpp_model.mli  bppsuite.ml  bppsuite.mli  codon.ml  codon.mli  discrete_pd.ml  discrete_pd.mli  dna.ml  dna.mli  dune  felsenstein.ml  felsenstein.mli  fitch.ml  fitch.mli  index.mld  iupac_nucleotide.ml  iupac_nucleotide.mli  (+66 more)
lib/convergence/: dune  multinomial_test.ml  multinomial_test.mli  nelder_mead.ml  profile_tsv.ml  simulator.ml  simulator.mli  tamuri.ml  tamuri.mli  tdg09.ml  tdg09.mli
lib/core/: alignment.ml  alignment.mli  bpp_interface.ml  felsenstein.ml  felsenstein.mli  lATools.ml  lATools.mli  linear_algebra_tools.mli  mCMC.ml  model_utils.ml  models.ml  models.mli  newick.ml  newick.mli  newick_lexer.mll  newick_parser.mly  nucleotide.ml  nucleotide.mli  phylogenetic_tree.ml  phylogenetic_tree.mli  reject_inference.ml  rejection_sampling.ml  sample.ml  sample.mli  seq.ml  seq.mli  seqgen.ml  sequence_generation.ml  sigs.ml  statTools.ml  statTools.mli  stat_tools.ml  stat_tools.mli  topoTree.ml  topoTree.mli  utils.ml  zipper.ml  zipper.mli
lib/test/: bpp_interface.ml  bpp_interface.mli  test_K80.ml  test_MCMC.ml  test_alignment.ml  test_felsenstein.ml  test_latools.ml  test_models.ml  test_newick.ml  test_rejection_sampling.ml  test_rejectionsampling.ml  test_sequence.ml  test_topotree.ml  test_utils.ml  test_utils.mli  test_zipper.ml
lib_test/: dune  jbuild  test_MCMC.ml  test_alignment.ml  test_felsenstein.ml  test_models.ml  test_newick.ml  test_rejection_sampling.ml  test_sequence.ml  test_topotree.ml  test_utils.ml  test_utils.mli  test_zipper.ml
src/: .ocamlinit  models.ml  test.ml  topoTree.ml
test_data/: big_1.JC69  big_1.seq  big_1.tree  big_2.JC69  big_2.seq  big_2.tree  huge_1.JC69  huge_1.seq  huge_1.tree  med_1.JC69  med_1.seq  med_1.tree  minitests  multi_1.JC69  multi_1.seq  multi_1.tree  small.test  small1.JC69  small1.tree  small2.JC69  small2.seq  small2.tree  small_1.seq  small_2.JC69  small_2.seq  small_2.tree  small_3.JC69  small_3.seq  small_3.tree  test_multi  test_single_big  tests  tiny1.fasta
tests/: dune  test_MCMC.ml  test_alignment.ml  test_felsenstein.ml  test_newick.ml  test_phylo_ctmc.ml  test_rejection_sampling.ml  test_sequence.ml  test_simulator.ml  test_site_evolution_model.ml  test_topotree.ml  test_utils.ml  test_utils.mli  test_zipper.ml
tests/data/: tiny1.fasta  tiny2.fasta
tests/expect/: birth_death_simulator.expected  birth_death_simulator.ml  dune  phylo_ctmc_conditional_simulation.expected  phylo_ctmc_conditional_simulation.ml  phylo_ctmc_conditional_simulation_missing_values.ml  phylo_ctmc_substitution_mappings.expected  phylo_ctmc_substitution_mappings.ml  simulator.expected  simulator.ml
