opam-version: "1.2"
version: "dev"
maintainer: "philippe.veber@gmail.com"
homepage: "https://github.com/biocaml/phylogenetics"
bug-reports: "https://github.com/biocaml/phylogenetics/issues"
license: "LGPL + linking exception"
dev-repo: "https://github.com/biocaml/phylogenetics.git"
authors: [
  "Vincent Lanore"
  "Philippe Veber"
]

build: ["jbuilder" "build" "-p" name "-j" jobs]

depends: [
  "biocaml" {>= "0.8.0"}
  "jbuilder" {build & >= "1.0+beta16"}
  "gnuplot"
  "lacaml" {>= "10.0.2"}
  "ocamlfind" {build}
  "pareto"
  "menhir"
]
