(executable
 (name test_app)
 (modules test_app)
 (libraries alcotest phylogenetics_test)
 (preprocess (pps ppx_jane)))

(rule
 (alias runtest)
 (action (run ./test_app.exe -q))
 (deps ../tests/data/tiny1.fasta ../tests/data/tiny2.fasta))

(rule
 (alias fulltest)
 (action (run ./test_app.exe))
 (deps ../tests/data/tiny1.fasta ../tests/data/tiny2.fasta))
