(library
 (name phylogenetics)
 (public_name phylogenetics)
 (inline_tests)
 (libraries angstrom.unix biocaml.ez core_kernel gnuplot gsl lacaml owl printbox)
 (preprocess (pps ppx_deriving.show ppx_inline_test ppx_jane -allow-unannotated-ignores)))

(menhir
 (modules newick_parser))

(ocamllex newick_lexer)
